# sonarr-plex-cleaner

./: Cargo.toml  LICENSE.txt  README.md
src/: application.rs  commands.rs  config.rs  lib.rs  main.rs  plex.rs  services.rs  sonarr.rs
src/commands/: tv.rs  version.rs
src/services/: jellyfin.rs  plex.rs  sonarr.rs
