[package]
edition = '2018'
name = "sonarr-plex-cleaner"
version = "0.0.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/sonarr-plex-cleaner"
readme = "README.md"
description = "crawls the plex & sonarr APIs to clean out watched shows' seasons"
documentation = "https://docs.rs/sonarr-plex-cleaner"

[badges]
travis-ci = { repository = "antifuchs/sonarr-plex-cleaner", branch = "master" }
maintenance = { status = "passively-maintained" }

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"
tag-prefix = "v"

[package.metadata.template_ci.clippy]
allow_failure = false
version = "stable"

[dependencies]
log = "0.4.6"
flexi_logger = { version = "^0.13.2", features = ["colors"] }
reqwest = "0.9.17"
serde_json = "1.0.39"
serde_derive = "1.0.92"
serde = "1.0.92"
structopt = "0.2.17"
byte-unit = "2.1.0"
serde-xml-rs = "0.3.1"
chrono = { version = "0.4.6", features = ["serde"] }