[package]
edition = '2018'
name = "sonarr-plex-cleaner"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
version = "0.2.0-dev"
license = "MIT"
repository = "https://github.com/antifuchs/sonarr-plex-cleaner"
readme = "README.md"
description = "crawls the plex & sonarr APIs to clean out watched shows' seasons"
documentation = "https://docs.rs/sonarr-plex-cleaner"

[badges]
travis-ci = { repository = "antifuchs/sonarr-plex-cleaner", branch = "master" }
maintenance = { status = "passively-maintained" }

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"
tag-prefix = "v"

[package.metadata.template_ci.clippy]
allow_failure = false
version = "stable"

[dependencies]
failure = "0.1"
gumdrop = "0.7.0"
lazy_static = "1"
serde = { version = "1", features = ["serde_derive"] }
secrecy = {version = "0.6.0", features = ["serde"] }
zeroize = { version = "1.1.0", features = ["alloc"] }
reqwest = "0.9.17"
url_serde = "0.2.0"
dirs = "2.0.1"
serde-humantime = "0.1.1"
humantime="1.2.0"
serde_json = "1.0.39"
byte-unit = "2.1.0"
serde-xml-rs = "0.3.1"
chrono = { version = "0.4.6", features = ["serde"] }
retry = "1.0.0"

[dependencies.abscissa_core]
version = "0.4.0"

[dev-dependencies.abscissa_core]
version = "0.4.0"
features = ["testing"]
